# SecureML_OPTEE

./: README.md
Tensorshield/: CMakeLists.txt
Tensorshield/ta/: user_ta_header_defines.h
Tinylib/ta/include/: user_ta_header_defines.h
datasets/SmartZone/cfg/: imagenet1k.data
datasets/darknetz/cfg/: mnist.dataset
